--- a/sites/index.html
+++ b/sites/index.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-  <meta charset="utf-8">
-  <title></title>
-  <meta name="author" content="Andreas Wachter">
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-</head>
-
-<body>
-  <p>Put your configs here</p>
-  <a href="/add">add config</a> <br>
-  <a href="/remove">delete config</a> <br>
-
-  <p>Configs</p>
-  <div id="configs">
-
-  </div>
-  <button type="button" onclick="loadJson()">Load JSON</button>
-</body>
-<script src="sites/scripts.js"></script>
-
+    <head>
+        <title>RIA | Projekt</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+        <meta name="author" content="Wachter, Tomek, Wresnik, Wallner">
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <body>
+    </head>
+    <body>
+        <div class="bgimg display-container text-white">
+        <div class="display-middle jumbo">
+            <p>Wörterbuch</p>
+        </div>
+        <div class="display-topleft container xxlarge">
+            <p><a href="add.html" target="_self" ><button class="button brown">dictionary</button></a></p>
+            <!--<p><button onclick="document.getElementById('dictionary').style.display='block'" class="button brown">dictionary</button></p>
+            onclick="document.getElementById('insert').style.display='block'" -->
+            <p><a href="remove.html" target="_self"><button class="button brown">new word</button></a></p>
+                
+        </div>
+        <div class="display-bottomleft container xxlarge">
+            <p>RIA Projekt</p>
+            <p>Andreas Wachter, Christine Tomek,<br/>Georg Wresnik, Marcus Wallner</p>
+        </div>
+        </div>
+    </body>
 </html>
