HTML5 adapted and validated

--- a/sites/index.html
+++ b/sites/index.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>RIA | Projekt</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-        <meta name="author" content="Wachter, Tomek, Wresnik, Wallner">
-        <link rel="stylesheet" type="text/css" href="style.css">
-        <body>
-    </head>
-    <body>
-        <div class="bgimg display-container text-white">
+<html lang="de">
+
+<head>
+    <title>RIA | Projekt</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+    <meta name="author" content="Wachter, Tomek, Wresnik, Wallner">
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+
+<body>
+    <div class="bgimg display-container text-white">
         <div class="display-middle jumbo">
             <p>Wörterbuch</p>
         </div>
         <div class="display-topleft container xxlarge">
-            <p><a href="add.html" target="_self" ><button class="button brown">dictionary</button></a></p>
-            <!--<p><button onclick="document.getElementById('dictionary').style.display='block'" class="button brown">dictionary</button></p>
-            onclick="document.getElementById('insert').style.display='block'" -->
-            <p><a href="remove.html" target="_self"><button class="button brown">new word</button></a></p>
-                
+            <form action="remove.html" method="get" target="_self">
+                <button class="button brown">dictionary</button>
+            </form>
+            <form action="add.html" method="get" target="_self">
+                <button class="button brown">new word</button>
+            </form>
         </div>
         <div class="display-bottomleft container xxlarge">
             <p>RIA Projekt</p>
-            <p>Andreas Wachter, Christine Tomek,<br/>Georg Wresnik, Marcus Wallner</p>
+            <p>Andreas Wachter, Christine Tomek,
+                <br/>Georg Wresnik, Marcus Wallner</p>
         </div>
-        </div>
-    </body>
+    </div>
+</body>
+
 </html>
