--- a/sites/add.html
+++ b/sites/add.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
 
   <head>
     <title>RIA | Projekt</title>
@@ -12,35 +12,36 @@
 
   <body>
     <div class="bgimg display-container text-white">
-    <div class="display-middle xlarge">
-      <h1>Add config</h1>
+      <div class="display-middle xlarge">
+        <h1>Add config</h1>
 
-      <br>
-      <form action="/new" method="post">
-      Name:<br>
-      <input name="name"></input>
-      <br>
-      Loadbalancer: <br>
-      <input name="lb"></input>
-      <br>
-      Url: <br>
-      <input name="domain"></input>
-      <br>
-      Network: <br>
-      <input name="network"></input>
-      <br>
-      Config: <br>
-      <textarea rows="4" cols="50" name="config">Please put your config here</textarea>
-      <br><br>
-      <input type="submit" value="add">
-      </form>
-      <div id="done"></div>
-    </div>
-    <div class="display-topleft container xxlarge">
-        <p><a href="index.html" target="_self" ><button class="button brown">back</button></a></p>
-    </div>   
-
-  </div>
+        <br>
+        <form action="/new" method="post">
+        Name:<br>
+        <input name="name">
+        <br>
+        Loadbalancer: <br>
+        <input name="lb">
+        <br>
+        Url: <br>
+        <input name="domain">
+        <br>
+        Network: <br>
+        <input name="network">
+        <br>
+        Config: <br>
+        <textarea rows="4" cols="50" name="config">Please put your config here</textarea>
+        <br><br>
+        <input type="submit" value="add">
+        </form>
+        <div id="done"></div>
+      </div>
+      <div class="display-topleft container xxlarge">
+        <form action="index.html" method="get" target="_self">
+          <button class="button brown">back</button>
+        </form>
+      </div>   
+     </div>
+    <script src="/new"></script>
   </body>
-<script src="/new"></script>
 </html>
