--- a/sites/remove.html
+++ b/sites/remove.html
@@ -1,32 +1,34 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>RIA | Projekt</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-    <meta name="author" content="Wachter, Tomek, Wresnik, Wallner">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <body>
-  </head>
+<html lang="de">
 
-  <body>
-    <div class="bgimg display-container text-white">
+<head>
+  <title>RIA | Projekt</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+  <meta name="author" content="Wachter, Tomek, Wresnik, Wallner">
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+
+<body>
+  <div class="bgimg display-container text-white">
     <div class="display-middle xlarge">
       <h1>Remove config</h1>
-
       <br>
       <form action="/delete" method="post">
-      Name:<br>
-      <input name="name"></input>
-      <br>
-      <input type="submit" value="Submit">
+        Name:
+        <br>
+        <input name="name">
+        <br>
+        <input type="submit" value="Submit">
       </form>
     </div>
     <div class="display-topleft container xxlarge">
-        <p><a href="index.html" target="_self" ><button class="button brown">back</button></a></p>
-    </div>   
+      <form action="index.html" method="get" target="_self">
+        <button class="button brown">back</button>
+      </form>
     </div>
-  </body>
+  </div>
+</body>
 
 </html>
