Pfade angepasst, GUI in server.js eingebaut

--- a/sites/add.html
+++ b/sites/add.html
@@ -37,7 +37,7 @@
         <div id="done"></div>
       </div>
       <div class="display-topleft container xxlarge">
-        <form action="index.html" method="get" target="_self">
+        <form action="/" method="get" target="_self" class="form">
           <button class="button brown">back</button>
         </form>
       </div>   
