--- a/sites/remove.html
+++ b/sites/remove.html
@@ -24,7 +24,7 @@
       </form>
     </div>
     <div class="display-topleft container xxlarge">
-      <form action="index.html" method="get" target="_self">
+      <form action="/" method="get" target="_self"class="form">
         <button class="button brown">back</button>
       </form>
     </div>
