--- a/sites/index.html
+++ b/sites/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <meta name="author" content="Wachter, Tomek, Wresnik, Wallner">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="sites/style.css">
 </head>
 
 <body>
@@ -16,10 +16,10 @@
             <p>Wörterbuch</p>
         </div>
         <div class="display-topleft container xxlarge">
-            <form action="remove.html" method="get" target="_self">
+            <form action="sites/remove.html" method="get" target="_self" class="form">
                 <button class="button brown">dictionary</button>
             </form>
-            <form action="add.html" method="get" target="_self">
+            <form action="sites/add.html" method="get" target="_self" class="form">
                 <button class="button brown">new word</button>
             </form>
         </div>
@@ -29,6 +29,15 @@
                 <br/>Georg Wresnik, Marcus Wallner</p>
         </div>
     </div>
+    <footer>
+            <p class="display-bottomright">
+                    <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                        <img style="border:0;width:88px;height:31px"
+                            src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+                            alt="CSS ist valide!" />
+                        </a>
+                    </p>
+                          
+    </footer>
 </body>
-
 </html>
