--- a/sites/index.html
+++ b/sites/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
 
 <head>
-    <title>RIA | Projekt</title>
+    <title>RIA | Project</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
@@ -13,7 +13,7 @@
 <body>
     <div class="bgimg display-container text-white">
         <div class="display-middle jumbo">
-            <p>Wörterbuch</p>
+            <p>SWDictionary</p>
         </div>
         <div class="display-topleft container xxlarge">
             <form action="sites/remove.html" method="get" target="_self" class="form">
@@ -24,7 +24,7 @@
             </form>
         </div>
         <div class="display-bottomleft container xxlarge">
-            <p>RIA Projekt</p>
+            <p>RIA Project</p>
             <p>Andreas Wachter, Christine Tomek,
                 <br/>Georg Wresnik, Marcus Wallner</p>
         </div>
