--- a/sites/remove.html
+++ b/sites/remove.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
 
 <head>
-  <title>RIA | Projekt</title>
+  <title>RIA | Project</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
@@ -13,8 +13,11 @@
 <body>
   <div class="bgimg display-container text-white">
     <div class="display-middle xlarge">
-      <h1>Remove config</h1>
-      <br>
+      <h1>SWDictionary</h1>
+      <div id="all">
+        <script src="scripts.js"></script>
+      </div>
+      <h2>Remove config</h2>
       <form action="/delete" method="post">
         Name:
         <br>
