--- a/sites/index.html
+++ b/sites/index.html
@@ -22,6 +22,9 @@
             <form action="sites/add.html" method="get" target="_self" class="form">
                 <button class="button brown">new word</button>
             </form>
+            <form action="sites/search.html" method="get" target="_self" class="form">
+                <button class="button brown">search</button>
+            </form>
         </div>
         <div class="display-bottomleft container xxlarge">
             <p>RIA Project</p>
