--- a/sites/remove.html
+++ b/sites/remove.html
@@ -15,16 +15,15 @@
     <div class="display-middle xlarge">
       <h1>SWDictionary</h1>
       <div id="all">
-        <script src="scripts.js"></script>
+        <script src="/sites/scripts.js"></script>
       </div>
       <h2>Remove config</h2>
-      <form action="/delete" method="post">
         Name:
         <br>
-        <input name="name">
+        <input name="name" id="name">
         <br>
-        <input type="submit" value="Submit">
-      </form>
+      <button type="button" onclick="removeWord()" class="button brown">Remove</button>
+      <div id="removed"></div>
     </div>
     <div class="display-topleft container xxlarge">
       <form action="/" method="get" target="_self"class="form">
