--- a/sites/remove.html
+++ b/sites/remove.html
@@ -10,19 +10,19 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<body>
+<body onload="loadJson()">
   <div class="bgimg display-container text-white">
     <div class="display-middle xlarge">
       <h1>SWDictionary</h1>
       <div id="all">
         <script src="/sites/scripts.js"></script>
       </div>
-      <h2>Remove config</h2>
+      <h2>Delete Entry</h2>
         Name:
         <br>
         <input name="name" id="name">
         <br>
-      <button type="button" onclick="removeWord()" class="button brown">Remove</button>
+      <button type="button" onclick="removeWord()" class="button brown">Delete</button>
       <div id="removed"></div>
     </div>
     <div class="display-topleft container xxlarge">
