--- a/sites/search.html
+++ b/sites/search.html
@@ -19,7 +19,7 @@
             <br/>
             <input type="text" id="search" name="search">
             <br/>
-            <button type="button" onclick="loadWord()" class="button brown">Load JSON</button>
+            <button type="button" onclick="loadWord()" class="button brown">Search</button>
             <div id="word"></div>
         </div>
         <div class="display-topleft container xxlarge">
