--- a/sites/index.html
+++ b/sites/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <meta name="author" content="Wachter, Tomek, Wresnik, Wallner">
     <link rel="stylesheet" type="text/css" href="sites/style.css">
+    <script src="/sites/scripts.js"></script>
 </head>
 
 <body>
@@ -34,13 +35,14 @@
     </div>
     <footer>
             <p class="display-bottomright">
-                    <a href="http://jigsaw.w3.org/css-validator/check/referer">
-                        <img style="border:0;width:88px;height:31px"
-                            src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
-                            alt="CSS ist valide!" />
-                        </a>
-                    </p>
-                          
+                <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                    <img style="border:0;width:88px;height:31px"
+                         src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+                         alt="CSS ist valide!" />
+                </a>
+                <p id="geo"></p>
+                <script>window.onload=getLocation()</script>
+            </p>
     </footer>
 </body>
 </html>
